# libstacktrace

./: .gitignore  LICENSE  meson.build
src/: stacktrace.c  stacktrace.h
test/: test.c
